Side bar menu alignment fixed by creating table

--- a/app/assets/stylesheets/components/_reviews.scss
+++ b/app/assets/stylesheets/components/_reviews.scss
@@ -16,11 +16,11 @@
   margin-bottom: 25px;
 }
 
-.orange-star {
-  color: $yellow;
+.green-leaf {
+  color: $green;
 }
 
-.grey-star {
+.grey-leaf {
   color: lightgrey;
 }
 
